fixed double scrollbar

--- a/src/Home.css
+++ b/src/Home.css
@@ -14,6 +14,7 @@ html *{
   margin:30px;
   margin-top:50px;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .App-header{
